--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mathematics": "1.2.6",
+    "com.unity.mobile.android-logcat": "1.4.4",
     "com.unity.postprocessing": "3.4.0",
     "com.unity.render-pipelines.core": "14.0.11",
     "com.unity.render-pipelines.universal": "14.0.11",
